# image-processing-and-generation

./: .gitattributes  .gitignore  README.md  eda.ipynb  requirements.txt  test-metrics-table.ipynb  test.ipynb  test_metrics_to_df.ipynb  train.ipynb  unet.ipynb
homework_distill/: distill_logits.drawio
homeworks/hw1/: README.md
homeworks/hw2/: README.md
homeworks/hw3/: README.md
homeworks/hw4/: README.md
homeworks/hw_example/: README hw 1.md  README.md
lesson materials/autoencodres/: VAE.ipynb
lesson materials/foundation_models/: Foundation_Model.ipynb
lesson materials/intro_to_generation/: Intro to generative modeling.ipynb  categorical_distribution.py  pyproject.toml
lesson materials/metrics_of_generation_task/: .gitignore  README.md  metrics_of_generation_task.ipynb  requirements.txt
lesson materials/object_detection/: obj_seg_problem.ipynb
practise_1/: README.md
reports/: README.md
src/: big_conv_vae.py  cityscapes_data_handler.py  data_processing.py  linear_vae.py  metrics.py  pipeline.py  small_conv_vae.py  trainer.py  unet.py  utils.py
