[tool.poetry]
name = "intro-to-generation"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
stats = "^0.1.2a0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
